--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="flat_code">flat code</string>
     <string name="join_flat">Join flat</string>
     <string name="create_new_flat">Create new flat</string>
+    <string name="profile_title">Profile</string>
+    <string name="assignment_title">Assignments</string>
+    <string name="home_title">Home</string>
 </resources>
