--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="profile_title">Profile</string>
     <string name="assignment_title">Assignments</string>
     <string name="home_title">Home</string>
+    <string name="name_of_flat">Name of flat:</string>
+    <string name="create">Create</string>
 </resources>
