--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="home_title">Home</string>
     <string name="name_of_flat">Name of flat:</string>
     <string name="create">Create</string>
+    <string name="profile_picture">Profile picture</string>
 </resources>
