--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="name_of_flat">Name of flat:</string>
     <string name="create">Create</string>
     <string name="profile_picture">Profile picture</string>
+    <string name="this_week_turn">This week turn</string>
+    <string name="finish_clean">Finish clean</string>
 </resources>
