--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="leave_flat_button_title">Leave flat</string>
     <string name="profile_picture">Profile picture</string>
     <string name="this_week_turn">This week turn</string>
-    <string name="finish_clean">Finish clean</string>
+    <string name="finish_clean">Clean</string>
 </resources>
