--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="join_flat">Enter the Flat Code</string>
     <string name="create_new_flat">Create new flat</string>
     <string name="profile_title">Profile</string>
-    <string name="assignment_title">Assignments</string>
+    <string name="assignment_title">Schedule</string>
     <string name="home_title">Home</string>
     <string name="name_of_flat">Name your flat</string>
     <string name="create">Create</string>
@@ -14,4 +14,7 @@
     <string name="profile_picture">Profile picture</string>
     <string name="this_week_turn">This week turn</string>
     <string name="finish_clean">Clean</string>
+    <string name="join_flat_title">Join your flatmates or create new flat</string>
+    <string name="qr_button_title">Scan QR Code</string>
+    <string name="logout_button_title">Log out</string>
 </resources>
